--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,6 @@ paginate_path: "blog/page:num"
 sass:
   sass_dir: _sass
   style: :compressed
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jekyll-feed]
 bootstrap:
   assets: true
